[gd_scene load_steps=17 format=2]

[ext_resource path="res://UnSelectedSphere.material" type="Material" id=1]
[ext_resource path="res://SelectionSphere.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://CourierPrime-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://PB - Sci-Fi UI Free SFX/hover.wav" type="AudioStream" id=5]
[ext_resource path="res://CustomImageLayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://custom-photos/cat1.jpg" type="Texture" id=7]

[sub_resource type="SphereMesh" id=1]
radius = 0.1
height = 0.2

[sub_resource type="SphereShape" id=2]
radius = 0.123919

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("LabelViewport")

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
params_cull_mode = 2
params_depth_draw_mode = 1
params_billboard_mode = 1
albedo_texture = SubResource( 4 )

[sub_resource type="QuadMesh" id=6]
size = Vector2( 1.4, 1.4 )

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("ImageViewport")

[sub_resource type="SpatialMaterial" id=8]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
params_cull_mode = 2
params_depth_draw_mode = 1
params_billboard_mode = 1
albedo_color = Color( 1, 1, 1, 0.509804 )
albedo_texture = SubResource( 7 )

[sub_resource type="QuadMesh" id=9]
size = Vector2( 1.4, 1.4 )

[node name="SelectionSphere" type="KinematicBody"]
input_capture_on_drag = true
script = ExtResource( 2 )
texture = ExtResource( 7 )
display_text = "Test text"

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.999971, -0.00643144, 0.00401933, 0.00644553, 0.999973, -0.00350446, -0.00399669, 0.00353026, 0.999986, 0, 0, 0 )
material_override = ExtResource( 1 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="LabelViewport" type="Viewport" parent="."]
size = Vector2( 700, 700 )
own_world = true
transparent_bg = true
render_target_v_flip = true

[node name="CanvasLayer" type="CanvasLayer" parent="LabelViewport"]

[node name="Label" type="Label" parent="LabelViewport/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
margin_bottom = 6.10352e-05
mouse_filter = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "Test text"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="ImageViewport" type="Viewport" parent="."]
size = Vector2( 700, 700 )
own_world = true
transparent_bg = true
render_target_v_flip = true

[node name="CustomImageLayer" parent="ImageViewport" instance=ExtResource( 6 )]

[node name="LabelQuad" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.212402, 0 )
material_override = SubResource( 5 )
mesh = SubResource( 6 )
material/0 = null

[node name="ImageQuad" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.559084, 0 )
material_override = SubResource( 8 )
mesh = SubResource( 9 )
material/0 = null

[node name="HoverPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="mouse_entered" from="." to="." method="_on_SelectionSphere_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SelectionSphere_mouse_exited"]
